# elyra-conductor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  RELEASING.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
.conductor/notes/: dev.md
.github/: FUNDING.yml
docs/: architecture.md  command-history.md  command-palette.md  database.md  development.md  docs.json  elyra-agent.md  files-and-editor.md  git.md  index.md  keybindings.md  persistence.md  projects.md  quickstart.md  releasing.md  runbooks.md  tasks.md  tauri-commands.md  terminals.md  troubleshooting.md  usage.md  workspaces.md  worktrees.md
scripts/: gen-icon.mjs  make-latest-json.mjs  release-build.sh
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  db.rs  fs.rs  history.rs  lib.rs  main.rs  projects.rs  pty.rs
src/lib/: AboutModal.svelte  AgentDashboard.svelte  AgentPanel.svelte  CommandPalette.svelte  CommitDialog.svelte  ContextMenu.svelte  DBPanel.svelte  DBView.svelte  DataTransferDialog.svelte  Editor.svelte  EnvModal.svelte  FileExplorer.svelte  FileFinder.svelte  FileTree.svelte  GitPanel.svelte  InputDialog.svelte  MorningBrief.svelte  PortsModal.svelte  RunModal.svelte  RunbookPanel.svelte  SchemaDiffDialog.svelte  ScrollbackSearch.svelte  ShortcutsModal.svelte  Sidebar.svelte  TasksModal.svelte  Terminal.svelte  TimelineModal.svelte  WorktreeModal.svelte  fileFilter.js  layout.js  monaco-setup.js  util.js
