[package]
name = "elyra-conductor"
version = "0.4.0"
description = "Local project conductor: switcher, terminals, quick-edit"
authors = ["kwhorne <kh@gets.no>"]
license = "MIT"
edition = "2021"

[lib]
name = "elyra_conductor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
mysql = "25"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
