[package]
name = "elyra-conductor"
version = "0.8.4"
description = "Local project conductor: switcher, terminals, quick-edit"
authors = ["kwhorne <kh@gets.no>"]
license = "MIT"
edition = "2021"

[lib]
name = "elyra_conductor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
mysql = "25"
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = "0.19.13"
postgres-native-tls = "0.5"
native-tls = "0.2"
tokio-native-tls = "0.3"
tokio = { version = "1", features = ["net", "io-util"] }
klickhouse = "0.15.3"
# Remote SQL Anywhere / libsql (sqld) over HTTP — thin Hrana client, no bundled SQLite.
libsql = { version = "0.9", default-features = false, features = ["remote", "tls"] }
keyring = { version = "3", features = ["apple-native"] }
trash = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
